--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -17,10 +17,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": ["jasmine", "node"],
-    "module": "commonjs" // If needed for Node or test runner compatibility
+    "types": ["jasmine"]
   },
-  "files": [],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"],
   "exclude": ["node_modules", "**/*.ngfactory.ts", "**/*.ngsummary.ts"]
 }
