--- a/angular.json
+++ b/angular.json
@@ -23,12 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+            "assets": ["src/favicon.icon", "src/assets"],
             "styles": ["src/styles.scss"],
             "scripts": []
           },
